--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Chat",
-  "short_name": "Chat",
-  "description": "Bezpieczny komunikator",
+  "name": "Kalkulator",
+  "short_name": "Kalkulator",
+  "description": "Kalkulator Pro",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f0f0f",
